--- a/day-4-new-card/days-folder/styling.css
+++ b/day-4-new-card/days-folder/styling.css
@@ -1,4 +1,4 @@
-@import url("/styles.css");
+@import url("../styles.css");
 
 
 body {
@@ -13,14 +13,21 @@ body {
 }
 .screenshot img {
     width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+.tap {
+    font-size: 12px;
 }
 .title {
     text-align: center;
+    font-size: 14px;
 }
 .links p {
     font-size: 18px;
     font-weight: 600;
 }
+.tap,
 .links p,
 .comment{
     margin: .5rem;
